<resources>
    <string name="app_name">Weather APP</string>
    <string name="current_location">Current location</string>
    <string name="menu_button">Menu button</string>
    <string name="change_location_button">Change Location Button</string>
    <string name="temperature">-5</string>
    <string name="precipitation">Cloudy, snow</string>
    <string name="wind">Wind 100 mps, N</string>
</resources>